@@ -2,7 +2,10 @@ Source: openssh
 Section: net
 Priority: standard
 Maintainer: Debian OpenSSH Maintainers <debian-ssh@lists.debian.org>
-Build-Depends: debhelper-compat (= 13),
+Build-Depends: autotools-dev,
+               debhelper (>= 9.20160709~),
+               debhelper-compat (= 9),
+               dh-autoreconf,
                dh-exec,
                dh-runit (>= 2.8.8),
                dpkg-dev (>= 1.16.1~),
