@@ -11,7 +11,6 @@ etc/ssh/sshd_config => usr/share/openssh/sshd_config
 debian/openssh-server.ucf-md5sum => usr/share/openssh/sshd_config.md5sum
 
 debian/openssh-server.ufw.profile => etc/ufw/applications.d/openssh-server
-debian/systemd/ssh.service lib/systemd/system
 debian/systemd/ssh.socket lib/systemd/system
 debian/systemd/rescue-ssh.target lib/systemd/system
 debian/systemd/ssh@.service lib/systemd/system
