@@ -106,7 +106,14 @@ ifeq ($(shell dpkg-vendor --is Ubuntu && echo yes) $(DEB_HOST_ARCH), yes i386)
 endif
 
 %:
-	dh $@ --with=runit $(BUILD_PACKAGES)
+	dh $@ --with=autoreconf,systemd,runit $(BUILD_PACKAGES)
+
+autoreconf:
+	autoreconf -f -i
+	cp -f /usr/share/misc/config.guess /usr/share/misc/config.sub ./
+
+override_dh_autoreconf-arch:
+	dh_autoreconf debian/rules -- autoreconf
 
 override_dh_autoreconf-indep:
 
@@ -163,7 +170,7 @@ override_dh_install-arch:
 		debian/tmp/etc/ssh/ssh_config \
 		debian/tmp/etc/ssh/sshd_config
 
-	dh_install -Nopenssh-client-udeb -Nopenssh-server-udeb
+	dh_install -Nopenssh-client-udeb -Nopenssh-server-udeb --fail-missing
 ifeq ($(filter noudeb,$(DEB_BUILD_PROFILES)),)
 	dh_install -popenssh-client-udeb -popenssh-server-udeb \
 		--sourcedir=debian/build-udeb
@@ -176,12 +183,12 @@ override_dh_installdocs:
 	# Avoid breaking dh_installexamples later.
 	mkdir -p debian/openssh-server/usr/share/doc/openssh-client
 
+override_dh_systemd_enable:
+	dh_systemd_enable -popenssh-server --name ssh ssh.service
+	dh_systemd_enable -popenssh-server --name ssh --no-enable ssh.socket
+
 override_dh_installinit:
 	dh_installinit -R --name ssh
-
-override_dh_installsystemd:
-	dh_installsystemd -popenssh-server ssh.service rescue-ssh.target
-	dh_installsystemd -popenssh-server --no-enable ssh.socket
 
 debian/openssh-server.sshd.pam: debian/openssh-server.sshd.pam.in
 ifeq ($(DEB_HOST_ARCH_OS),linux)
