@@ -2,6 +2,7 @@ openssh (1:8.9p1-3ppa~focal1) no-change; urgency=low
 
   * Backport to focal.
   * Revert use of dh_installalternatives.
+  * Revert upgrade to debhelper v13.
 
  -- Carl Kittelberger <icedream@icedream.pw>  Sun, 01 May 2022 21:43:06 +0200
 
